@startuml
skinparam classAttributeIconSize 0

interface Connectable {
 +Connection createConnection(url : String, userName : String, password : String )
}

class JRConnection {
        -url : String;
        -userName : String;
        -password : String;
        -dataSourceTag : String;
        -connection : Connection;
}

JRConnection --> Connection

interface JRExport {
    +export()
}

class JRExportXSLX {
   +export()
}

class JRExportPDF {
   +export()
}


class JRExportDOC {
   +export()
}

class JRExportNULL {
   +export()
}

class JRPackage {
        -jROutput : JROutput
        -jRReportList : JReportList
        -jRConnection : JRConnection;
}

JRPackage o-- JROutput
JRPackage o-- JReportList
JRPackage o-- JRConnection

class JROutput {
    -jROutputDestination : JROutputDestination
}
class JROutputDestination
class JROutputDestinationFile
class JROutputDestinationMail

JROutputDestinationFile --|> JROutputDestination
JROutputDestinationMail --|> JROutputDestination


class JReport {
 -template : JRTemplate
 -paramList : List<JRParam>
 -exportType : JRExportType
 -fileName : String
 -jrBeforeReportAction : JRBeforeReportAction
 +JRFile execute(jRConnection : JRConnection)
}

interface JRBeforeReportAction {
    +void execute(connection : Connection)
}

JRExportType ..|> JRExport
JRExportXSLX ..|> JRExport
JRExportPDF ..|> JRExport
JRExportDOC ..|> JRExport
JRExportNULL ..|> JRExport

JRExportType o.. JRExportXSLX
JRExportType o.. JRExportPDF
JRExportType o.. JRExportDOC

class JReportList {
    -jReportList : JReportList [0..*]
}

JReport ..> JRExportType

JReport --> JRBeforeReportAction

JReport o--JRParam

JROutput --> JROutputDestination
JReport --> JRTemplate

JReportList o--JReport

class JRTemplate {
    - jRTemplateSource : JRTemplateSource
}

class JRTemplateSource

class JRTemplateSourceDB {
    -templateDBExtractor : TemplateDBExtractor
    -tag : String
    connection : JRConnection
}
class JRTemplateSourceFile
class JRTemplateSourceTextBase64

abstract class JRParam {
    - key : String
}

class JRParamValNumber {
        - val : Long
}
class JRParamValString {
        - val: String
}

JRParamValString --|> JRParam
JRParamValNumber --|> JRParam

JRTemplateSourceDB --|> JRTemplateSource
JRTemplateSourceFile --|> JRTemplateSource
JRTemplateSourceTextBase64 --|> JRTemplateSource

JRTemplate --> JRTemplateSource
JRTemplateSourceDB <-- JRConnection

enum JRExportType {
XLSX
PDF
DOC
NULL
}

JRExportType ..|> JRExportAction

interface TemplateDBExtractor {
 +String findTemplateByTag(connection:Connection,tag:String);
}

JRTemplateSourceDB --> TemplateDBExtractor


class JRFile {
    -data : ByteArrayOutputStream
    -name : String
    -exportType : JRExportType
}

JRFile ..> JReport

interface JRExportAction {
    +ByteArrayOutputStream export(jasperPrint : JasperPrint)
    +String getExtension()
    +String getMimeType()
}


@enduml